# jsonl-lab

./: .gitignore  .ignore  Cargo.toml  README.md
crates/jsonl-cli/: Cargo.toml
crates/jsonl-cli/src/: main.rs
crates/jsonl-core/: Cargo.toml
crates/jsonl-core/src/: dataset.rs  format.rs  index.rs  inspect.rs  lib.rs  parser.rs
crates/jsonl-server/: Cargo.toml
crates/jsonl-server/src/: lib.rs
web/viewer/: index.html  package-lock.json  package.json  vite.config.ts
web/viewer/src/: App.tsx  api.ts  main.tsx  styles.css  utils.ts
web/viewer/src/components/: Navigator.tsx  RangeList.tsx  RecordViewer.tsx  TopBar.tsx
