[package]
name = "jsonl-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "jsonl-lab"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
jsonl-core = { path = "../jsonl-core" }
jsonl-server = { path = "../jsonl-server" }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
